tests/specs/npm/workspace_basic/b/no-exports-sub-path-not-exists.out
[# not the best error, but it did resolve because there was no exports specified]
error: [ERR_MODULE_NOT_FOUND] Cannot find module 'file:///[WILDLINE]/c/non-existent' imported from 'file:///[WILDLINE]/b/no-exports-sub-path-not-exists.ts'
    at file:///[WILDLINE]/b/no-exports-sub-path-not-exists.ts:1:20
